--- a/website-request.html
+++ b/website-request.html
@@ -140,8 +140,8 @@
 <body>
   <!-- Promo -->
   <div class="promo-bar">
-    1 month on us when you switch to annual. Ends 9/30.
-    <a class="btn" href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144">Upgrade</a>
+    Earn $200 for every client you refer. Ends 10/31.
+    <a class="btn" href="https://www.webeaze.io/referral">Refer Now </a>
   </div>
 
 
