--- a/portal.html
+++ b/portal.html
@@ -115,8 +115,8 @@
 <body>
   <!-- Promo -->
   <div class="promo-bar">
-    Get 1 month free when you switch to annual billing. Ends 9/30.
-    <a class="btn" href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144" target="_blank" rel="noopener">Upgrade</a>
+    Earn $200 for every client you refer. Ends 10/31.
+    <a class="btn" href="referral.html" target="_blank" rel="noopener">Refer Now</a>
   </div>
 
   <!-- NAV (unchanged) -->
