--- a/samples.html
+++ b/samples.html
@@ -133,7 +133,7 @@
         <button class="chip" data-filter="all" aria-pressed="true" role="tab"><i class="fas fa-border-all"></i> All</button>
         <button class="chip" data-filter="education" role="tab"><i class="fas fa-graduation-cap"></i> Education</button>
         <button class="chip" data-filter="fitness" role="tab"><i class="fas fa-dumbbell"></i> Fitness</button>
-        <button class="chip" data-filter="home" role="tab"><i class="fas fa-broom"></i> Home Services</button>
+        <button class="chip" data-filter="home" role="tab"><i class="fas fa-broom"></i> Local Trades</button>
         <button class="chip" data-filter="ecom" role="tab" disabled title="More launching soon"><i class="fas fa-shopping-bag"></i> eCom (soon)</button>
       </div>
     </div>
