--- a/maintenance.html
+++ b/maintenance.html
@@ -110,7 +110,7 @@
   <div class="container container-narrow py-2 d-flex align-items-center justify-content-between">
     <a href="/" class="d-inline-flex align-items-center">
       <img class="logo mr-2" src="images/webeaze-transparent copy.png" alt="WebEaze" />
-      <strong>WebEaze Web Design</strong>
+      <strong>WebEaze</strong>
     </a>
 
     <!-- Desktop -->
