--- a/website-request.html
+++ b/website-request.html
@@ -141,7 +141,7 @@
   <!-- Promo -->
   <div class="promo-bar">
     Earn $200 for every client you refer. Ends 10/31.
-    <a class="btn" href="https://www.webeaze.io/referral">Refer Now </a>
+    <a class="btn" href="https://webeaze.io/referral">Refer Now </a>
   </div>
 
 
