--- a/consultation.html
+++ b/consultation.html
@@ -175,11 +175,14 @@
       <h2>Quick answers</h2>
       <dl class="faq">
         <dt>Is the consult really free?</dt>
-        <dd>Yes. It's a discovery call to see if we're a fit and to outline next steps.</dd>
+        <dd>Yes. It's a discovery call to see if we're a fit and to outline next steps. It lasts 15 minutes and is obligation-free. Further, we provide a free mockup with every consultation if you think of moving forward with us. 
+
+        </dd>
         <dt>Do you charge hourly?</dt>
         <dd>No. We offer monthly and yearly subscriptions for predictable costs.</dd>
         <dt>How do we meet?</dt>
-        <dd>Zoom or phone by default. You can also use Live Chat or Email if you prefer.</dd>
+        <dd>Zoom or phone by default. You can also use Live Chat or Email if you prefer. You're able to choose your preferred method when booking. 
+        </dd>
       </dl>
     </div>
   </section>
