--- a/contact-us.html
+++ b/contact-us.html
@@ -123,7 +123,7 @@
       <div class="grid grid-3">
         <div class="card-solid">
           <h5><strong>Contact Form</strong></h5>
-          <p>Best for new projects and general inquiries. Share a few details and we’ll reply with next steps.</p>
+          <p>Best for business opportunities, job inquiries, or former client support. </p>
           <p class="mb-0"><em>Form below.</em></p>
         </div>
         <div class="card-solid">
