--- a/plan-success.html
+++ b/plan-success.html
@@ -164,7 +164,7 @@
           </div>
           <div class="step">
             <div><span class="num">2</span><strong>Content & Access</strong></div>
-            <p class="muted" style="margin:8px 0 0">Upload your logo, images, copy, and any logins right in the <a href="portal.html"><u>Portal</u></a>.</p>
+            <p class="muted" style="margin:8px 0 0">Submit a <a href="website-request.html"><u>Website Request</u></a> with any relevant information such as logins, content, and media.</p>
           </div>
           <div class="step">
             <div><span class="num">3</span><strong>First Preview</strong></div>
@@ -220,8 +220,14 @@
           <a class="btn-ghost" href="website-request.html">Contact Support</a>
         </div>
       </section>
+
+      
     </div>
+
+
   </main>
+
+  
 
   <!-- FOOTER -->
   <footer>
