--- a/portal.html
+++ b/portal.html
@@ -221,10 +221,13 @@
 
           <!-- WHAT'S NEW -->
           <div id="tab-whatsnew" class="tab-panel active" role="tabpanel" aria-labelledby="tab-whatsnew-btn">
-            <p class="muted"><i>Updated: September 9, 2025</i></p>
+            <p class="muted"><i>Updated: September 25, 2025</i></p>
             <ul class="pl-3">
               <li>New request ETA helper and simplified copy-paste templates.</li>
               <li>Zoom support is limited until December 15, 2025. Our new hours are 9:00am - 1:00pm ET Monday through Friday.</li>
+              <li>
+                Through October 31, 2025, refer a client and earn $200 when they sign up. <a href="referral.html" target="_blank" rel="noopener">Learn more</a>.
+              </li>
             </ul>
           </div>
 
@@ -343,8 +346,12 @@
   <script>
     /* ---------- Business Hours (ET) ---------- */
     const holidayClosures = {
-      "01-01":"New Year's Day","05-27":"Memorial Day","06-19":"Juneteenth",
-      "07-04":"Independence Day","09-01":"Labor Day","11-28":"Thanksgiving Day",
+      "01-01":"New Year's Day",
+      "01-20":"Martin Luther King Jr. Day","02-17":"Presidents' Day",
+      "05-27":"Memorial Day","06-19":"Juneteenth",
+      "07-04":"Independence Day","09-01":"Labor Day", "10-13":"Columbus Day", 
+      "11-11":"Veterans Day",
+      "11-28":"Thanksgiving Day",
       "11-29":"Day after Thanksgiving","12-24":"Christmas Eve","12-25":"Christmas Day","12-31":"New Year's Eve"
     };
     const enow = () => new Date(new Date().toLocaleString('en-US',{timeZone:'America/New_York'}));
