--- a/pricing.html
+++ b/pricing.html
@@ -157,7 +157,7 @@
 <body>
   <!-- Promo -->
   <div class="promo-bar" role="region" aria-label="Promotion">
-    Fall in love with a <b>$0 setup fee</b> (reg. $299) on monthly plans — through 9/30.
+    Ends September 30. Fall in love with a <b>$0 setup fee</b> (reg. $299) on monthly plans. 
     <a class="btn" href="consultation.html">Get Started</a>
   </div>
 
