--- a/website-request.html
+++ b/website-request.html
@@ -64,6 +64,7 @@
     header.hero{
       position:relative;overflow:hidden;text-align:center;
       background:
+      
         radial-gradient(900px 400px at 10% -10%, rgba(255,255,255,.10), transparent 60%),
         radial-gradient(900px 400px at 90% -10%, rgba(255,255,255,.10), transparent 60%),
         linear-gradient(180deg, rgba(120,81,169,.92), rgba(93,64,55,.95));
@@ -140,7 +141,7 @@
 <body>
   <!-- Promo -->
   <div class="promo-bar">
-    Earn $200 for every client you refer. Ends 10/31.
+    Earn $200 for every business you refer. Ends 10/31.
     <a class="btn" href="https://webeaze.io/referral">Refer Now </a>
   </div>
 
@@ -280,25 +281,25 @@
                     <div class="form-group col-md-6">
                       <label for="reqType">Request type</label>
                       <select id="reqType" class="form-control">
-                        <option value="minor">Minor content update</option>
+                        <option value="minor">Content update</option>
                         <option value="bug">Bug fix / broken link</option>
                         <option value="newpage">New page</option>
                         <option value="feature">Feature / integration</option>
-                        <option value="seo">SEO/meta updates</option>
+                        <option value="seo">SEO or meta updates</option>
                         <option value="style">Style / layout changes</option>
                       </select>
                     </div>
                     <div class="form-group col-md-6">
                       <label for="urgency">Urgency</label>
                       <select id="urgency" class="form-control">
-                        <option value="normal">Normal</option>
-                        <option value="soon">Soon</option>
-                        <option value="rush">Time-sensitive</option>
+                        <option value="normal">Not Urgent</option>
+                        <option value="soon">Time Sensitive</option>
+                        <option value="rush">ASAP</option>
                       </select>
                     </div>
                   </div>
                   <div class="eta"><span id="etaDot" class="dot good"></span><strong>Estimated turnaround:&nbsp;</strong><span id="etaText">24–72 hours (business hours)</span></div>
-                  <p class="help mt-2 mb-0">Estimate for planning only. Work is completed during business hours. Rush requests are subject to a $69 rush fee. </p>
+                  <p class="help mt-2 mb-0" style="padding-top: 20px;">Estimate for planning only.  Rush requests are subject to a $69 rush fee. </p>
                 </div>
       </div>
         
@@ -334,7 +335,7 @@
           </div>
         </div>
 
-        <!-- Templates -->
+        <!-- Templates
         <div class="card-glass tile templates">
           <h3 class="mb-1"><i class="far fa-file-alt"></i> Request templates</h3>
           <p class="help">Copy, fill in the blanks, and paste into your request for these frequent inquiries. </p>
@@ -354,17 +355,18 @@
             <pre id="tpl3">My website is down and I am not sure why. I have attached a screenshot of what happens when I load my website. Please advise. </pre>
             <button class="btn btn-sm btn-outline-light copy-btn" data-target="tpl3">Copy</button>
           </div>
-        </div>
+        </div> -->
 
         <!-- Expectations -->
         <div class="card-glass tile">
-          <h3 class="mb-1"><i class="fas fa-stopwatch"></i> Service expectations</h3>
+          <h3 class="mb-1" style="padding-bottom: 20px;"><i class="fas fa-stopwatch"></i> Service expectations</h3>
           <ul class="pl-3 mb-2">
             <li><span class="help">Business hours:</span> Mon–Fri, 9:00am–5:00pm ET</li>
+            <li><span class="help">Holidays:</span> closed major US holidays</li>
             <li><span class="help">Typical turnaround:</span> minor updates 24–72 hrs</li>
             <li><span class="help">Fair use:</span> reasonable monthly limits keep things speedy for everyone</li>
           </ul>
-          <p class="help mb-0">You’ll get email confirmation after you submit. We’ll reach out if we need anything else.</p>
+          <p class="help mb-0" style="padding-top: 20px;">You’ll get email confirmation after you submit. We’ll reach out if we need anything else.</p>
         </div>
       </aside>
     </section>
