--- a/index.html
+++ b/index.html
@@ -484,9 +484,10 @@ html { scroll-behavior: smooth; } /* native smooth scroll */
           </div> -->
 
           <div class="hero-card p-3 p-md-4 text-center">
-            <div class="small mb-1">🎉 LIMITED TIME OFFER</div>
-            <div class="h5 mb-1">Enjoy a $0 setup fee and discover your dream website today! </div>
-            <div class="small">Usually $299 • Ends Sept 30</div>
+            <div class="small mb-1">🎉 ENDS SEPTEMBER 30</div>
+            <div class="h5 mb-1">Get A New Website with $0 setup + Free Website Mockup
+            </div>
+            <div class="small">Ongoing Maintenance • Ends Soon</div>
             <a href="https://webeaze.io/consultation" class="btn btn-brand mt-3">Get Started Today</a>
           </div>
 
