--- a/referral.html
+++ b/referral.html
@@ -142,8 +142,8 @@
     <div class="row align-items-center">
       <div class="col-md-7">
         <div class="eyebrow">Referral Program</div>
-        <h1 class="headline mt-2 display-4">Earn <span class="sparkle">$100</span> for every client you send our way.</h1>
-        <p class="subhead mt-3">No codes. No limits. Share WebEaze with a business owner—once they sign up and clear the first week, you get paid.</p>
+        <h1 class="headline mt-2 display-4">Earn <span class="sparkle">$200</span> for every client you send our way.</h1>
+        <p class="subhead mt-3">No codes. No limits. Share WebEaze with a business owner. Once they sign up and clear the first week, you get paid.</p>
         <div class="mt-3">
           <a href="https://406km9.share-na2.hsforms.com/2dzuAwKMYSnOES4ubap3SiQ" class="btn btn-brand mr-2 mb-2" target="_blank" rel="noopener">Submit a Referral</a>
           <a href="#how" class="btn btn-ghost mb-2">How it Works</a>
@@ -188,7 +188,7 @@
       <article class="step reveal">
         <div class="card-simple h-100">
           <div class="d-flex align-items-center mb-2"><span class="icon-badge">3</span><strong>You get paid</strong></div>
-          <p class="mb-2">After their first week clears, you receive <strong>$100</strong> via Venmo, Cash App, PayPal, or Zelle.</p>
+          <p class="mb-2">After their first week clears, you receive <strong>$200</strong> via Venmo, Cash App, PayPal, or Zelle.</p>
           <a class="btn btn-ghost btn-sm" href="https://406km9.share-na2.hsforms.com/2dzuAwKMYSnOES4ubap3SiQ" target="_blank" rel="noopener">Submit a Referral</a>
         </div>
       </article>
@@ -239,7 +239,7 @@
     </details>
 
     <details class="faq reveal">
-      <summary><strong>What counts for the $100?</strong></summary>
+      <summary><strong>What counts for the $200?</strong></summary>
       <div class="pt-2">A referral who signs up for a paid website support & management plan and stays active for 7+ days from start.</div>
     </details>
 
@@ -263,7 +263,7 @@
 <section class="py-5 text-center section-band" data-parallax id="cta">
   <div class="container container-narrow surface">
     <h2 class="h4 mb-2 reveal" style="font-weight:bold;">Know a business that needs a better website?</h2>
-    <p class="subhead reveal">Send them our way and earn <strong>$100</strong> when they sign up.</p>
+    <p class="subhead reveal">Send them our way and earn <strong>$200</strong> when they sign up. Through Oct 31.</p>
     <a href="https://406km9.share-na2.hsforms.com/2dzuAwKMYSnOES4ubap3SiQ" class="btn btn-brand mt-2 reveal" target="_blank" rel="noopener">Submit a Referral</a>
   </div>
 </section>
