--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   }
   .webeaze-nav{background:transparent!important;box-shadow:none!important;padding:.6rem 0;transition:padding .18s ease}
   .scrolled .webeaze-nav{padding:.45rem 0}
-  .brand-word{letter-spacing:-.3px;font-weight:700;background:linear-gradient(90deg,var(--purple),#0f1228);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+  .brand-word{letter-spacing:-.3px;font-weight:700;background:linear-gradient(90deg,#6920c3,#5D4037);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
   .navbar-dark .nav-link{color:#fff!important;opacity:.92;border-radius:10px;padding:.45rem .7rem}
   .navbar-dark .nav-link:hover{opacity:1;background:rgba(255,255,255,.08)}
   .btn-nav{background:var(--gold);color:#2f1e66;border:none;border-radius:12px;padding:.6rem .9rem;font-weight:700;box-shadow:0 8px 22px rgba(255,215,0,.22)}
@@ -264,11 +264,24 @@
 }
 .promo-close:hover{ opacity:1; background:rgba(255,255,255,.12) }
 
-/* Mobile: stack nicely */
+
 @media (max-width:768px){
   .promo-inner{ flex-wrap:wrap; gap:8px; }
   .promo-close{ position:absolute; right:10px; top:6px; }
 }
+
+
+.hero{ position:relative; overflow:hidden; }     
+html,body{ overflow-x:hidden; }                   
+
+
+.halo{
+  inset:-22% 0 auto 0;       
+  width:140%;
+  left:50%;
+  transform:translateX(-50%);
+}
+
 
 
 </style>
