--- a/plan-success.html
+++ b/plan-success.html
@@ -195,7 +195,7 @@
             <div class="t-title">3) Domain next steps</div>
             <p>New domain or transfer? This guide keeps it painless.</p>
             <div class="cta" style="margin-top:10px">
-              <a class="btn-ghost" href="https://webeaze.tawk.help/category/domain-support" target="_blank" rel="noopener">Domain Help</a>
+              <a class="btn-ghost" href="domains.html" target="_blank" rel="noopener">Domain Help</a>
             </div>
           </div>
         </div>
