--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   position:absolute; left:50%; bottom:14px; transform:translateX(-50%);
   display:inline-flex; align-items:center; gap:8px;
   padding:.5rem .8rem; border-radius:999px; font-weight:700;
-  background:rgba(255,255,255,.95); color:var(--ink);
+  background: #f2c600; color:var(--ink);
   border:1px solid var(--line); box-shadow:0 8px 20px rgba(16,18,37,.06);
   transition:opacity .25s ease, transform .25s ease;
 }
@@ -280,6 +280,16 @@ html,body{ overflow-x:hidden; }
   width:140%;
   left:50%;
   transform:translateX(-50%);
+}
+
+.hero h1.headline {
+  font-size: clamp(28px, 6vw, 56px);  
+  line-height: 1.07;
+}
+
+
+@media (max-width: 480px){
+  .headline .rotate{ width: 10.5ch; }
 }
 
 
