--- a/referral.html
+++ b/referral.html
@@ -92,6 +92,16 @@
     section[id]{scroll-margin-top:72px}
     html{scroll-behavior:smooth}
     footer{font-size:.95rem;color:#fff;opacity:.95}
+
+    .hero h1.headline {
+  font-size: clamp(28px, 6vw, 56px);  
+  line-height: 1.07;
+}
+
+
+@media (max-width: 480px){
+  .headline .rotate{ width: 10.5ch; }
+}
   </style>
 </head>
 <body>
