--- a/maintenance.html
+++ b/maintenance.html
@@ -75,7 +75,7 @@
       background-size:18px 18px; mask-image:linear-gradient(#000, transparent 75%);
     }
     .eyebrow{font-size:.85rem;letter-spacing:.08em;text-transform:uppercase;color:#5b5f75}
-    .headline{font-weight:800;letter-spacing:-.02em;line-height:1.05;color:#0f1228}
+    .headline{font-weight:800;letter-spacing:-.02em;line-height:1.05; font-size: 50px; color:#0f1228}
     .rotate{display:inline-grid; position:relative; width:13ch; vertical-align:top}
     .rotate span{
       grid-area:1/1; animation:swap 8s ease-in-out infinite;
@@ -139,6 +139,52 @@
     @media (prefers-reduced-motion:reduce){.reveal{opacity:1!important;transform:none!important;transition:none!important}}
 
     section[id]{scroll-margin-top:76px}
+
+
+.headline .rotate{
+  display:inline-grid;        
+  position:relative;
+  width:13ch;                 
+  vertical-align:baseline;
+}
+.headline .rotate > span{
+  grid-area:1/1;              
+  opacity:0;                  
+  transform:translateY(.35em);  
+  transition:opacity .35s ease, transform .35s ease;
+}
+
+/* pure-CSS loop */
+.headline .rotate > span:nth-child(1){animation:swap 6.6s ease-in-out infinite 0s}
+.headline .rotate > span:nth-child(2){animation:swap 6.6s ease-in-out infinite 2.2s}
+.headline .rotate > span:nth-child(3){animation:swap 6.6s ease-in-out infinite 4.4s}
+
+@keyframes swap{
+  0%   {opacity:0; transform:translateY(.35em)}
+  8%   {opacity:1; transform:translateY(0)}
+  28%  {opacity:1; transform:translateY(0)}
+  38%  {opacity:0; transform:translateY(-.35em)}
+  100% {opacity:0; transform:translateY(-.35em)}
+}
+
+
+@media (prefers-reduced-motion:reduce){
+  .headline .rotate > span{animation:none!important; opacity:0; transform:none}
+  .headline .rotate > span:first-child{opacity:1}
+}
+
+
+.hero h1.headline {
+  font-size: clamp(28px, 6vw, 56px);  
+  line-height: 1.07;
+}
+
+
+@media (max-width: 480px){
+  .headline .rotate{ width: 10.5ch; }
+}
+
+
   </style>
 </head>
 <body class="maintenance-page">
