--- a/refund-policy.html
+++ b/refund-policy.html
@@ -122,8 +122,10 @@
           <p>Within your plan scope, we provide revisions, bug fixes, and status updates to resolve problems quickly.</p>
         </div>
         <div class="card-solid">
-          <h5><strong>Billing Corrections</strong></h5>
-          <p>Accidental/duplicate charges are reversed or credited once verified—just send charge details.</p>
+          <h5><strong>Cancellation Policy</strong></h5>
+          <p>
+            You may cancel your plan anytime through your <a href="/portal">Client Portal</a>. Services end immediately upon cancellation and no further charges occur. There are no refunds for unused time.
+          </p>
         </div>
       </div>
     </div>
