--- a/website-request.html
+++ b/website-request.html
@@ -279,6 +279,7 @@
                 <div class="card-glass p-3 mb-3">
                   <div class="form-row">
                     <div class="form-group col-md-6">
+                      <h2 class="h5 mb-2"><i class="fas fa-clock"></i> Current Turnaround Times</h2>
                       <label for="reqType">Request type</label>
                       <select id="reqType" class="form-control">
                         <option value="minor">Content update</option>
@@ -298,8 +299,8 @@
                       </select>
                     </div>
                   </div>
-                  <div class="eta"><span id="etaDot" class="dot good"></span><strong>Estimated turnaround:&nbsp;</strong><span id="etaText">24–72 hours (business hours)</span></div>
-                  <p class="help mt-2 mb-0" style="padding-top: 20px;">Estimate for planning only.  Rush requests are subject to a $69 rush fee. </p>
+                  <div class="eta"><span id="etaDot" class="dot good"></span><strong>Estimated turnaround:&nbsp;</strong><span id="etaText">24-72 hours (business hours)</span></div>
+                  <p class="help mt-2 mb-0" style>Estimate for planning only.  Subject to change. Rush requests are subject to a $69 rush fee. </p>
                 </div>
       </div>
         
