--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   .container-narrow{max-width:1100px}
   .logo{height:36px}
 
-  /* ===== NAV (unchanged visuals) ===== */
+
   .nav-wrap{
     position:sticky; top:0; z-index:9999;
-    background:linear-gradient(180deg, rgba(10,6,22,.55), rgba(10,6,22,.28));
+    background: #000000;
     backdrop-filter:saturate(130%) blur(8px); -webkit-backdrop-filter:saturate(130%) blur(8px);
     border-bottom:1px solid rgba(255,255,255,.14)
   }
   .webeaze-nav{background:transparent!important;box-shadow:none!important;padding:.6rem 0;transition:padding .18s ease}
   .scrolled .webeaze-nav{padding:.45rem 0}
-  .brand-word{letter-spacing:-.3px;font-weight:700;background:linear-gradient(90deg,#6920c3,#5D4037);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+  .brand-word{letter-spacing:-.3px;font-weight:700;background:linear-gradient(90deg,#e8e7ea,#66615f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
   .navbar-dark .nav-link{color:#fff!important;opacity:.92;border-radius:10px;padding:.45rem .7rem}
   .navbar-dark .nav-link:hover{opacity:1;background:rgba(255,255,255,.08)}
   .btn-nav{background:var(--gold);color:#2f1e66;border:none;border-radius:12px;padding:.6rem .9rem;font-weight:700;box-shadow:0 8px 22px rgba(255,215,0,.22)}
@@ -292,13 +292,120 @@ html,body{ overflow-x:hidden; }
   .headline .rotate{ width: 10.5ch; }
 }
 
+/* ===== STANDOUT SECTION ===== */
+#standout .surface{ padding:22px }
+#standout .kicker{
+  display:inline-block; padding:6px 10px; border-radius:999px;
+  background:#fff; border:1px solid var(--line); color:#3c4260;
+  font-size:.82rem; letter-spacing:.04em; text-transform:uppercase; font-weight:700;
+}
+#standout .head{ margin:8px 0 14px }
+#standout .sub{ color:#6b7280; margin:0 }
+
+
+.stand-grid{ display:grid; grid-template-columns:repeat(12,1fr); gap:14px; }
+.stand-card{
+  grid-column:span 4; background:#fff; border:1px solid var(--line); border-radius:14px;
+  padding:16px; box-shadow:0 8px 24px rgba(16,18,37,.06);
+}
+.stand-card h3{ font-size:1.05rem; margin:8px 0 6px; font-weight:800 }
+.stand-card p{ margin:0; color:#3c4260 }
+
+
+.icon-chip{
+  width:48px; height:48px; border-radius:12px; display:flex; align-items:center; justify-content:center;
+  background:linear-gradient(180deg, rgba(120,81,169,.12), rgba(255,215,0,.10));
+  border:1px solid var(--line);
+}
+
+
+.meter{ margin-top:10px; background:#eef1f7; border-radius:999px; height:8px; overflow:hidden }
+.meter .fill{
+  height:100%; transform:scaleX(0); transform-origin:left;
+  background:linear-gradient(90deg, #7e5fe0, #ffd700);
+  transition:transform .8s ease;
+}
+.meter.reveal.in-view .fill{ transform:scaleX(var(--pct, .9)) }
+
+
+.vs-card{
+  grid-column:span 12; display:grid; grid-template-columns:1fr 1fr; gap:12px;
+  background:#fff; border:1px solid var(--line); border-radius:14px; padding:14px; box-shadow:0 8px 24px rgba(16,18,37,.06)
+}
+.vs-side h4{ margin:0 0 6px; font-weight:800; font-size:1.05rem }
+.vs-side small{ color:#6b7280 }
+.vs-list{ list-style:none; padding:0; margin:8px 0 0 }
+.vs-item{ display:flex; align-items:center; gap:8px; padding:6px 0; color:#3c4260 }
+.badge-ok,.badge-no{
+  width:22px; height:22px; border-radius:6px; display:inline-flex; align-items:center; justify-content:center; font-weight:800;
+}
+.badge-ok{ background:#eaf9ef; border:1px solid #c9f0d4; color:#1b8a4a }
+.badge-no{ background:#fff1f1; border:1px solid #ffd2d2; color:#c62828 }
+
+
+.saves{ display:flex; flex-wrap:wrap; gap:8px; margin-top:10px }
+.save-chip{
+  display:inline-flex; align-items:center; gap:8px; background:#fff; border:1px dashed var(--gold);
+  padding:6px 10px; border-radius:999px; font-weight:700; box-shadow:0 6px 16px rgba(16,18,37,.05)
+}
+
+/* Responsive */
+@media (max-width:992px){ .stand-card{ grid-column:span 6 } }
+@media (max-width:768px){
+  .stand-card{ grid-column:span 12 }
+  .vs-card{ grid-template-columns:1fr; }
+}
+
+
+#standout{
+  position:relative;
+  padding: clamp(40px, 7vw, 64px) 0;
+  border-top:1px solid var(--line);
+  border-bottom:1px solid var(--line);
+}
+#standout::before{
+  content:"";
+  position:absolute; inset:0; z-index:0;
+
+  background:
+    radial-gradient(40% 60% at 12% -5%, rgba(121, 81, 169, 0.384), transparent 40%),
+    radial-gradient(36% 60% at 88% -8%, rgba(255, 217, 0, 0.279), transparent 40%),
+    linear-gradient(180deg, #2d215e76 0%, #2d215e76 100%);
+}
+#standout > .container{ position:relative; z-index:1; }
+
+
+#standout .surface{ background:#fff; }
+#standout .stand-card,
+#standout .vs-card{
+  background:#fff;
+  border-color:#eef1f7;
+  box-shadow:0 8px 24px rgba(16,18,37,.06);
+}
+
+
+@media (min-width: 768px){
+  #standout::after{
+    content:"";
+    position:absolute; inset:0; z-index:0; pointer-events:none;
+    background:
+      repeating-linear-gradient(0deg, rgba(16,18,37,.018) 0 1px, transparent 1px 24px),
+      repeating-linear-gradient(90deg, rgba(16,18,37,.018) 0 1px, transparent 1px 24px);
+    mask-image: linear-gradient(180deg, transparent, #000 10%, #000 90%, transparent);
+  }
+}
+
+/* full = visually 100% with tiny overshoot to avoid sub-pixel gap */
+.meter.full{ --value: 1.02; }        /* 102% but safely clipped */
+.meter.full .fill{ transition: transform .8s ease; }  /* still animates */
+
+
 
 
 </style>
 </head>
 <body>
 
-<!-- NAV (unchanged) -->
 <div class="nav-wrap">
   <div class="promo-bar" id="promoBar" role="region" aria-label="Promotion">
     <div class="container container-narrow promo-inner">
@@ -352,34 +459,118 @@ html,body{ overflow-x:hidden; }
         <p class="mt-3" style="color:#3f4564">
           We build clean, fast sites for local trades, tutoring agencies, and students. Then, we provide ongoing maintenance backed by a team that knows your business and goals. 
         </p>
-        <div class="btn-row mt-3">
-          <a href="#what" class="btn-brand">See what you get</a>
-          <a href="/samples.html" class="btn-ghost">See past work</a>
-        </div>
+
         <div class="stat-chips mt-3">
           <span class="chip">43+ active clients</span>
-          <span class="chip">Launch in 7–14 days</span>
-          <span class="chip">Unlimited maintenance</span>
+          <span class="chip">Launch in 7-14 days</span>
+          <span class="chip">Mobile-responsive designs</span>
+          <span class="chip">SEO tools included</span> 
         </div>
+        <div class="btn-row mt-3">
+          <a href="#standout" class="btn-brand">Learn More</a>
+          <a href="/samples.html" class="btn-ghost">See past work</a>
+        </div>
+
       </div>
     </div>
   </div>
 
-  <a href="#outcomes" id="scrollCue" class="scroll-cue" aria-label="See it in action">
-    Let's go!
-    <svg class="chev" width="18" height="18" viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M12 5v14M6 13l6 6 6-6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </a> 
 
   
 </header>
+
+<!-- HOW WE STAND OUT -->
+<section id="standout" class="py-5">
+  <div class="container container-narrow">
+    <div class="surface reveal">
+      <span class="kicker">Why WebEaze</span>
+      <div class="head d-flex flex-wrap align-items-end justify-content-between">
+        <h2 class="h4 mb-0" style="font-weight:800">What makes us different</h2>
+        <p class="sub mb-0">Clear pricing, fast shipping, and genuine ongoing care.</p>
+      </div>
+
+      <div class="stand-grid">
+        <!-- 1 -->
+        <article class="stand-card reveal">
+          <div class="icon-chip" aria-hidden="true">
+            <!-- Dollar / calendar -->
+            <svg width="22" height="22" viewBox="0 0 24 24"><path d="M8 3v2M16 3v2M3 9h18M5 7h14a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9a2 2 0 012-2zM8 13h5" stroke="#7e5fe0" stroke-width="2" fill="none" stroke-linecap="round"/></svg>
+          </div>
+          <h3>No hourly billing</h3>
+          <p>Flat monthly or yearly plans. Predictable costs—no surprise invoices.</p>
+          <div class="meter reveal" style="--pct:.40"><div class="fill"></div></div>
+        </article>
+
+        <!-- 2 -->
+        <article class="stand-card reveal">
+          <div class="icon-chip" aria-hidden="true">
+            <!-- Rocket -->
+            <svg width="22" height="22" viewBox="0 0 24 24"><path d="M5 19l4-1 7-7a4 4 0 00-6-6L3 8l1 4" stroke="#7e5fe0" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </div>
+          <h3>Fast launches</h3>
+          <p>First draft in days, typical launches in 7–14 days. Speed without the chaos.</p>
+          <div class="meter reveal" style="--pct:.79"><div class="fill"></div></div>
+        </article>
+
+        <!-- 3 -->
+        <article class="stand-card reveal">
+          <div class="icon-chip" aria-hidden="true">
+            <!-- Chat -->
+            <svg width="22" height="22" viewBox="0 0 24 24"><path d="M21 15a4 4 0 01-4 4H8l-5 3 1-5a4 4 0 01-4-4V7a4 4 0 014-4h13a4 4 0 014 4v8z" stroke="#7e5fe0" stroke-width="2" fill="none" stroke-linejoin="round"/></svg>
+          </div>
+          <h3>Real human support</h3>
+          <p>Email, chat, or Zoom with someone who already knows your site.</p>
+          <div class="meter reveal" style="--pct:1.0"><div class="fill"></div></div>
+        </article>
+
+        <!-- VS COMPARE -->
+        <div class="vs-card reveal">
+          <div class="vs-side">
+            <h4 style="color: #7851a9">WebEaze</h4>
+            <small>Built for small business</small>
+            <ul class="vs-list">
+              <li class="vs-item"><span class="badge-ok">✓</span> Unlimited maintenance</li>
+              <li class="vs-item"><span class="badge-ok">✓</span> 7–14 day launch targets</li>
+              <li class="vs-item"><span class="badge-ok">✓</span> Flat monthly / yearly pricing</li>
+              <li class="vs-item"><span class="badge-ok">✓</span> SEO basics + speed care included</li>
+            </ul>
+          </div>
+          <div class="vs-side">
+            <h4>Typical agency</h4>
+            <small>Better for big budgets</small>
+            <ul class="vs-list">
+              <li class="vs-item"><span class="badge-no">x</span> Hourly billing & retainers</li>
+              <li class="vs-item"><span class="badge-no">x</span> Weeks to months to launch</li>
+              <li class="vs-item"><span class="badge-no">x</span> Updates billed per task</li>
+              <li class="vs-item"><span class="badge-no">x</span> Support queues / tickets only</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- SAVINGS / PROOF -->
+        <div class="stand-card reveal" style="grid-column:span 12">
+          <h3 style="margin-top:0">Why it stays affordable</h3>
+          <p>We standardize the stack, automate the boring bits, and focus on what moves the needle: clean pages, quick updates, and performance basics.</p>
+          <div class="saves">
+            <span class="save-chip">No hourly rates</span>
+            <span class="save-chip">Updates included</span>
+            <span class="save-chip">Launch faster</span>
+            <span class="save-chip">Personalized support</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 <!-- OUTCOME DEMOS (visual, fast) -->
 <section class="py-4" id="outcomes">
   <div class="container container-narrow">
-    <h2 class="h5 mb-3 reveal" style="font-weight:800;color:#0f1228">What this looks like on your site</h2>
+    <h2 class="h5 mb-3 reveal" style="font-weight:800;color:#0f1228"></h2>
+
+    <h2 class="h4 mb-0" style="font-weight:800; text-align: center; padding: 20px;" >What this looks like </h2>
     
 
     <div class="outcomes">
@@ -501,11 +692,11 @@ html,body{ overflow-x:hidden; }
         <div class="num">3</div>
         <div>
           <h3>Launch & care</h3>
-          <p>Go live fast. We handle updates, speed, and small fixes as you grow.</p>
+          <p>Go live quickly. We handle updates, speed, and small fixes as your business or brand grows.</p>
         </div>
       </div>
-      <div class="text-center mt-2">
-        <a href="consultation.html" class="btn-brand">Start free consultation</a>
+      <div class="text-center mt-2" style="padding: 20px;">
+        <a href="consultation.html" class="btn-brand" >Start free consultation</a>
       </div>
     </div>
   </div>
@@ -558,7 +749,7 @@ html,body{ overflow-x:hidden; }
     <div class="faq-grid">
       <details class="reveal" style="background:#fff;border:1px solid var(--line);border-radius:14px;padding:14px">
         <summary><strong>Which platforms do you support?</strong></summary>
-        <div class="pt-2">WordPress, Squarespace, Wix, or clean HTML/CSS when speed and control matter most.</div>
+        <div class="pt-2">WordPress, Squarespace, Wix, or clean HTML/CSS when speed and control matter most. We're also platform-agnostic, so we can work with what you have.</div>
       </details>
       <details class="reveal" style="background:#fff;border:1px solid var(--line);border-radius:14px;padding:14px">
         <summary><strong>How long does it take?</strong></summary>
@@ -569,7 +760,7 @@ html,body{ overflow-x:hidden; }
         <div class="pt-2">Yes. We refresh design, improve speed, and migrate hosting without breaking what works.</div>
       </details>
       <details class="reveal" style="background:#fff;border:1px solid var(--line);border-radius:14px;padding:14px">
-        <summary><strong>What’s included after launch?</strong></summary>
+        <summary><strong>What's included after launch?</strong></summary>
         <div class="pt-2">Ongoing maintenance: content updates, small fixes, performance checks, and help via email, chat, or Zoom.</div>
       </details>
     </div>
