--- a/site-map.html
+++ b/site-map.html
@@ -118,7 +118,7 @@
           <h5 class="mb-2"><strong>Client & Support</strong></h5>
           <ul class="list-clean">
             <li><a href="/portal.html">Client Portal</a></li>
-            <li><a href="/domains.html">Get Started</a></li>
+            <li><a href="/domains.html">Domain Setup</a></li>
             <li><a href="https://webeaze.io/website-request">Website Request</a></li>
             <li><a href="/contact-us.html">Contact</a></li>
             <li><a href="https://webeaze.tawk.help" target="_blank" rel="noopener">Help Center</a></li>
