--- a/domains.html
+++ b/domains.html
@@ -48,12 +48,11 @@
     html{ scroll-behavior: smooth; }
   </style>
 
-  <!-- ========= Scoped Overrides for THIS PAGE ONLY ========= -->
   <style>
     /* Light, minimalist content area without touching the nav/footer */
     .domains-page main {
-      --page-bg:#f8fafc;      /* soft light */
-      --page-ink:#1f2340;     /* deep slate */
+      --page-bg:#f8fafc;      
+      --page-ink:#1f2340;     
       --page-muted:#6b7280;   /* gray-600 */
       --page-line:#e5e7eb;    /* gray-200 */
       --accent:#7851a9;       /* brand purple (sparingly) */
@@ -170,6 +169,8 @@
         </p>
         <div class="mt-3">
           <a href="#options" class="btn-accent mr-2">See options</a>
+          <br>
+          <br>
           <a href="website-request.html" class="btn-neutral">Submit Domain Request</a>
         </div>
       </div>
@@ -350,6 +351,9 @@
           </div>
           <div class="mt-3 mt-md-0">
             <a href="website-request.html" class="btn-accent mr-2">Start now</a>
+ 
+            <br>
+            <br>
             <a href="https://webeaze.tawk.help/category/domain-support" class="btn-neutral">Visit the Help Center</a>
           </div>
         </div>
