--- a/index.html
+++ b/index.html
@@ -823,12 +823,12 @@ html,body{ overflow-x:hidden; }
         <div class="pt-2">Most builds take 1 to 2 weeks depending on content readiness and queue.</div>
       </details>
       <details class="reveal" style="background:#fff;border:1px solid var(--line);border-radius:14px;padding:14px">
-        <summary><strong>Can you maintain my current site?</strong></summary>
-        <div class="pt-2">Yes. We refresh design, improve speed, and migrate hosting without breaking what works.</div>
+        <summary><strong>What if I already have a website?</strong></summary>
+        <div class="pt-2">We can help with existing websites. We refresh design, improve speed, and migrate hosting without breaking what works.</div>
       </details>
       <details class="reveal" style="background:#fff;border:1px solid var(--line);border-radius:14px;padding:14px">
         <summary><strong>What's included after launch?</strong></summary>
-        <div class="pt-2">Ongoing maintenance: content updates, small fixes, performance checks, and help via email, chat, or Zoom.</div>
+        <div class="pt-2">Ongoing maintenance and care: content updates, small fixes, performance checks, and help via email, chat, or Zoom. </div>
       </details>
     </div>
   </div>
