--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ html,body{ overflow-x:hidden; }
       </button>
       <div id="mobileNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto main-nav">
-          <a class="nav-link mr-3" href="#year1">Year 1</a>
+          <a class="nav-link mr-3" href="/anniversary.html">We're Turning 1</a>
           <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
           <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
