--- a/index.html
+++ b/index.html
@@ -467,14 +467,14 @@ html,body{ overflow-x:hidden; }
       <div class="col-lg-8">
         <div class="eyebrow">Elegant • Effortless • Ongoing Care</div>
         <h1 class="headline mt-2 display-4">
-          Websites that <span class="hl-underline">look great</span> and
+          Websites that <span class="hl-underline">look great </span>
           <span class="swap" aria-live="polite">
-            <span class="show">showcase your work.</span>
-            <span>load fast.</span>
-            <span>drive leads.</span>
-            <span>convert visitors.</span>
-            <span>grow your business.</span>
-            <span>works on any device.</span>
+            <span class="show"> and showcase your work.</span>
+            <span>and load fast.</span>
+            <span> and drive leads.</span>
+            <span> and convert visitors.</span>
+            <span> and grow your business.</span>
+            <span> and works on any device.</span>
           </span>
         </h1>
         <p class="mt-3" style="color:#3f4564">
