--- a/pricing.html
+++ b/pricing.html
@@ -159,7 +159,7 @@
   <div class="nav-wrap">
     <div class="promo-bar">
       <div class="promo-inner container-narrow">
-        <span>🎉 <strong>$0 setup</strong> on monthly plans + free homepage mockup. Ends 9/30.</span>
+        <span>🎉 <strong>$0 setup</strong> on monthly plans w/ free homepage mockup. Ends tomorrow.</span>
         <a href="consultation.html" class="btn-promo">Yes!</a>
       </div>
     </div>
@@ -231,7 +231,7 @@
       <div class="stats mt-3">
         <div class="stat reveal"><div class="num counter" data-count="48">0</div><div class="lbl">Avg hours/edit window</div></div>
         <div class="stat reveal"><div class="num counter" data-count="14">0</div><div class="lbl">Avg days to launch</div></div>
-        <div class="stat reveal"><div class="num counter" data-count="43">0</div><div class="lbl">Active clients</div></div>
+        <div class="stat reveal"><div class="num counter" data-count="44">0</div><div class="lbl">Active clients</div></div>
       </div>
 
       <div class="reasons mt-3">
