--- a/maintenance.html
+++ b/maintenance.html
@@ -242,10 +242,10 @@
         <div class="col-lg-8">
           <div class="eyebrow">Unlimited Care · Real Humans · Fast Turnarounds</div>
           <h1 class="headline mt-2 display-4">
-            Ongoing maintenance that <span class="rotate">
-              <span>ships requests.</span>
-              <span>fixes issues.</span>
-              <span>moves revenue.</span>
+            Ongoing help that<span class="rotate">
+              <span>boosts revenue.</span>
+              <span>keeps things modern.</span>
+              <span>you can count on.</span>
             </span>
           </h1>
           <p class="mt-3" style="color:#3a3f56">
