--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@ html,body{ overflow-x:hidden; }
           <span class="swap" aria-live="polite">
             <span class="show"> and showcase your work.</span>
             <span>and load fast.</span>
-            <span> and drive leads.</span>
+            <span> and generate leads.</span>
             <span> and convert visitors.</span>
-            <span> and grow your business.</span>
+            <span> and grows your business.</span>
             <span> and works on any device.</span>
           </span>
         </h1>
