Updates to offers

--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@ html,body{ overflow-x:hidden; }
     <div class="container container-narrow promo-inner">
       <span class="emoji" aria-hidden="true">🎉</span>
       <span class="promo-text">
-        <strong>$0 setup</strong> on monthly plans + <strong>free homepage mockup</strong>. Ends tomorrow.
+        <strong>Earn $200</strong> for every business you refer to WebEaze.<strong> Ends 10/31.</strong>
       </span>
-      <a href="consultation.html" class="btn-promo ml-2">Claim offer</a>
+      <a href="referral.html" class="btn-promo ml-2">Refer Now</a>
       <button class="promo-close" aria-label="Dismiss promotion">&times;</button>
     </div>
   </div>
