--- a/pricing.html
+++ b/pricing.html
@@ -159,8 +159,8 @@
   <div class="nav-wrap">
     <div class="promo-bar">
       <div class="promo-inner container-narrow">
-        <span>🎉 <strong>$0 setup</strong> on monthly plans w/ free homepage mockup. Ends tomorrow.</span>
-        <a href="consultation.html" class="btn-promo">Yes!</a>
+        <span>🎉 <strong>Earn $200</strong> for every business you refer to WebEaze. Ends 10/31.</span>
+        <a href="consultation.html" class="btn-promo">Refer Now</a>
       </div>
     </div>
     <div class="container container-narrow">
