--- a/domains.html
+++ b/domains.html
@@ -183,7 +183,7 @@
         <div class="grid-3">
           <article class="card">
             <div class="mb-1"><span class="icon">🔗</span><strong>Connect (fastest)</strong></div>
-            <p class="muted mb-2">You can keep your domain at GoDaddy, Namecheap, Google Domains, etc. We update A/CNAME to point at your new website.</p>
+            <p class="muted mb-2">You can keep your domain at GoDaddy, Namecheap, Google Domains, etc. We'll update your A, CNAME records to point at your new website.</p>
             <ul class="checklist muted">
               <li>Stay in full control at your registrar</li>
               <li>DIY with our DNS records or share a temporary login</li>
