--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ html,body{ overflow-x:hidden; }
           <input type="text" aria-label="Name" placeholder="Name" required>
           <input type="tel" aria-label="Phone" placeholder="Phone" required>
           <button class="btn-mini submit">Get quote</button>
-          <div class="ok" aria-hidden="true">✓ Sent — we’ll reply shortly</div>
+          <div class="ok" aria-hidden="true">✓ Sent — we'll reply shortly</div>
         </form>
       </article>
 
