--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>WebEaze — Affordable Web Design, Fast Launch & Unlimited Website Maintenance</title>
+<title>WebEaze — Affordable Web Design & Unlimited Maintenance</title>
 <meta name="description" content="WebEaze builds fast, conversion-ready websites and stays to maintain them. Simple plans, quick launches, real human help for local trades, tutoring agencies, and student portfolios." />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -446,7 +446,9 @@ html,body{ overflow-x:hidden; }
       </button>
       <div id="mobileNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto main-nav">
-          <a class="nav-link mr-3" href="/anniversary.html">We're Turning 1</a>
+          <a class="nav-link mr-3" href="/anniversary.html">One Year Anniversary!
+
+          </a>
           <li class="nav-item"><a class="nav-link" href="maintenance.html">Maintenance</a></li>
           <li class="nav-item"><a class="nav-link" href="pricing.html">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
