--- a/index.html
+++ b/index.html
@@ -589,13 +589,15 @@ html,body{ overflow-x:hidden; }
 
         <!-- SAVINGS / PROOF -->
         <div class="stand-card reveal" style="grid-column:span 12">
-          <h3 style="margin-top:0">Why it stays affordable</h3>
-          <p>We standardize the stack, automate the boring bits, and focus on what moves the needle: clean pages, quick updates, and performance basics.</p>
+          <h3 style="margin-top:0">Who we build for
+          </h3>
+          <p>
+            We with with people (maybe you) who have ambitious minds and goals that go beyond just "having a website."  That starts with a small market focus so we fully understand your needs and deliver results. 
+          </p>
           <div class="saves">
-            <span class="save-chip">No hourly rates</span>
-            <span class="save-chip">Updates included</span>
-            <span class="save-chip">Launch faster</span>
-            <span class="save-chip">Personalized support</span>
+            <span class="save-chip">Local Trades</span>
+            <span class="save-chip">Tutoring Agencies</span>
+            <span class="save-chip">Student Portfolios</span>
           </div>
         </div>
       </div>
