--- a/anniversary.html
+++ b/anniversary.html
@@ -124,10 +124,14 @@
           <div class="num-card reveal"><div class="small text-muted">Avg. Onboarding</div><div class="big">7–14 days</div></div>
           <div class="num-card reveal"><div class="small text-muted">Uptime</div><div class="big" data-count-to="99.9" data-decimals="1" data-suffix="%">0</div></div>
         </div>
-        <div class="mt-3">
+        <br>
+    
           <a href="https://webeaze.tawk.help/article/referral" class="btn-brand mr-2 mb-2">Refer & Earn $200</a>
-          <a href="consultation.html" class="btn-ghost mb-2">Free Consultation</a>
-        </div>
+            <br>
+            <br>
+            <br>
+          <a href="consultation.html" class="btn-ghost mb-2">Get Started</a>
+    
       </div>
       <div class="col-lg-4 mt-4 mt-lg-0">
         <figure class="mock-browser reveal">
