--- a/index.html
+++ b/index.html
@@ -598,13 +598,13 @@ html,body{ overflow-x:hidden; }
             <span class="save-chip">Local Trades</span>
             <span class="save-chip">Tutoring Agencies</span>
             <span class="save-chip">Student Portfolios</span>
-            <br>
-            <br>
-            <br>
+          
+
             <a href="work-with.html" class="btn-brand">
-              See who we work with
+              Who We Serve >
             </a>
           </div>
+          <br>
   
         </div>
      
