--- a/consultation.html
+++ b/consultation.html
@@ -146,7 +146,7 @@
           <div class="step"><strong>3. Next steps</strong><span class="small-muted">Timeline and how we launch.</span></div>
         </div>
         <div class="btn-row mt-3">
-          <a href="#book" class="btn-brand">Book now</a>
+          <a href="pricing.html" class="btn-brand" target="_blank">View Plans</a>
           <a href="#why" class="btn-ghost">Why WebEaze</a>
         </div>
         <div class="small-muted mt-2">No hourly billing. Simple plans. Real human help.</div>
