--- a/index.html
+++ b/index.html
@@ -827,9 +827,9 @@ html,body{ overflow-x:hidden; }
 <section id="service-area" class="band-area">
   <div class="container container-narrow">
     <div class="area-content reveal">
-      <span class="kicker">WHERE WE Work </span>
+      <span class="kicker">WHERE WE WORK </span>
       <h2 class="area-head" style="word-wrap: break-word">Maryland • Delaware • New Jersey • Pennsylvania</h2>
-      <p class="sub mb-3">Mid-Atlantic focus. Remote anywhere in the U.S.</p>
+      <p class="sub mb-3">Mid-Atlantic focus. Remote anywhere in the United States.</p>
       <!-- <div class="btn-row">
         <a href="work-with.html" class="btn-brand">Who We Serve →</a>
       </div> -->
