--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
     /* FAQ */
     .faq-wrap{margin-top:0}
     .faq-item{background:#fff;border:1px solid var(--line);border-radius:14px;margin:10px 0;overflow:hidden;box-shadow:0 10px 28px rgba(16,18,37,.05)}
-    .faq-q{width:100%;text-align:left;background:transparent;color:var(--ink);border:0;outline:none;padding:16px 18px;font-weight:800;display:flex;align-items:center;justify-content:space-between;cursor:pointer}
+    .faq-q{width:100%;text-align:left;background:transparent;color:black;border: 5px;outline:none;padding:16px 18px;font-weight:800;display:flex;align-items:center;justify-content:space-between;cursor:pointer}
     .faq-q .icon{transition:transform .25s}
     .faq-a{max-height:0;overflow:hidden;transition:max-height .3s ease;background:#fafbff;border-top:1px solid #eef1f7;padding:0 18px}
     .faq-a-inner{padding:14px 0 18px;color:#3c4260}
