updates to help center

--- a/pricing.html
+++ b/pricing.html
@@ -237,7 +237,7 @@
       </article>
     </div>
 
-    <div class="small text-center mt-3 text-muted">No hidden fees. Cancel anytime on monthly plans.</div>
+    <div class="small text-center mt-3 text-muted">No hidden fees. Cancel anytime.</div>
   </div>
 </section>
 
