--- a/website-request.html
+++ b/website-request.html
@@ -94,7 +94,7 @@
       <div class="container container-narrow promo-inner">
         <span class="emoji" aria-hidden="true">🎉</span>
         <span class="promo-text"><strong>Earn $200</strong> for every business you refer to WebEaze. <strong>Ends 10/31.</strong></span>
-        <a href="referral.html" class="btn-promo ml-2">Refer Now</a>
+        <a href="referral.html" class="btn-promo ml-2">Refer</a>
       </div>
     </div>
 
