--- a/pricing.html
+++ b/pricing.html
@@ -133,8 +133,10 @@
     <div class="row align-items-center">
       <div class="col-lg-8">
         <div class="eyebrow">Simple Plans</div>
-        <h1 class="headline mt-2">Choose what fits today—upgrade anytime</h1>
-        <p class="sub mt-2">No hourly billing. Clear features. Fast launches. Real maintenance when you need changes.</p>
+        <h1 class="headline mt-2">Choose what fits today. 
+          Don't worry, no hourly invoices.
+        </h1>
+        <p class="sub mt-2">In addition to clear features. Fast launches. And unlimited maintenance when you need changes.</p>
         <div class="mt-3">
           <div class="toggle" role="tablist" aria-label="Billing toggle">
             <button id="tMonthly" class="active" aria-selected="true" aria-controls="monthly" role="tab">Monthly</button>
@@ -151,7 +153,7 @@
 </header>
 
 <!-- PLANS -->
-<section class="py-5">
+<section class="py-5" style="margin-top: -40px;">
   <div class="container container-narrow">
     <div id="monthly" class="plans reveal stagger">
       <!-- Essential -->
@@ -258,7 +260,7 @@
           </tbody>
         </table>
       </div>
-      <div class="btn-row mt-3"><a href="consultation.html" class="btn-brand">Need help choosing?</a></div>
+      <div class="btn-row mt-3"><a href="https://webeaze.tawk.help/category/webeaze-plans" target="_blank" class="btn-brand">Need help choosing?</a></div>
     </div>
   </div>
 </section>
