--- a/site-map.html
+++ b/site-map.html
@@ -26,7 +26,7 @@
     .container-narrow{max-width:1100px}
     .logo{height:36px}
 
-    /* ===== Global Nav (matches homepage) ===== */
+    /* ===== Global Nav ===== */
     .nav-wrap{
       position:sticky; top:0; z-index:9999;
       background:#000; border-bottom:1px solid rgba(255,255,255,.14);
@@ -64,7 +64,7 @@
       .promo-close{position:absolute;right:10px;top:6px}
     }
 
-    /* ===== Hero (matches homepage light gradient/halo) ===== */
+    /* ===== Hero ===== */
     .hero{position:relative;padding:86px 0;background:linear-gradient(180deg,#ffffff,#f7f8fc 70%)}
     .halo{
       position:absolute; inset:-22% 0 auto 0; width:140%; left:50%; transform:translateX(-50%); height:420px; pointer-events:none;
@@ -95,8 +95,29 @@
       border:1px solid var(--line);border-radius:12px;padding:.74rem 1.05rem;font-weight:700;line-height:1}
     .muted{color:var(--ink-2)}
 
-    /* ===== Footer (same as homepage) ===== */
+    /* ===== Footer  ===== */
     footer{font-size:.95rem;color:#fff;background:#7851a9}
+
+
+.navbar-brand{ text-decoration:none !important }
+
+.container-narrow{ max-width:1100px; padding:0 16px }
+
+
+.hero{
+  padding: clamp(42px, 8vh, 64px) 0 40px;  
+  overflow:hidden;                    
+}
+
+
+.search-shell{ max-width:680px; margin:12px auto 0 }
+
+
+@media (max-width:480px){
+  .hero{ padding:48px 0 28px }
+  .surface{ padding:16px }            
+}
+
   </style>
 </head>
 <body>
@@ -143,13 +164,15 @@
     <h1 class="headline">Site Map</h1>
     <p class="sub">Everything public on WebEaze—organized and grouped. For crawlers, see <a href="/sitemap.xml" style="text-decoration:underline"><strong>sitemap.xml</strong></a>.</p>
 
-    <div class="surface mt-3">
-      <div class="search-row">
-        <input id="siteSearch" class="search" type="search" placeholder="Search pages (pricing, samples, request, refund)..." aria-label="Search site links" />
-        <button id="clearBtn" class="btn-ghost" type="button">Clear</button>
-      </div>
-      <div id="count" class="small text-muted mt-2">Showing all links</div>
-    </div>
+
+<div class="surface search-shell mt-3">
+  <div class="search-row">
+    <input id="siteSearch" class="search" type="search" placeholder="Search pages (pricing, samples, request, refund)..." aria-label="Search site links" />
+    <button id="clearBtn" class="btn-ghost" type="button">Clear</button>
+  </div>
+  <div id="count" class="small text-muted mt-2">Showing all links</div>
+</div>
+
   </div>
 </header>
 
