--- a/work-with.html
+++ b/work-with.html
@@ -287,7 +287,8 @@
       <figure class="mock-browser reveal">
         <div class="chrome">
           <span class="dot red"></span><span class="dot yellow"></span><span class="dot green"></span>
-          <div class="url">Alq Ultra</div>
+          <div class="url">
+            Suitable for all devices </div>
         </div>
         <div class="screen">
           <img src="images/mockups-ad.png" alt="Example page preview">
